<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.SignInActivity">

    <TextView
        android:id="@+id/text_sign_in"
        style="@style/TextContent.Title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sub_title"
        style="@style/TextContentSubTitle.Description"
        android:layout_marginTop="8dp"
        android:text="@string/sub_title_welcome_back"
        app:layout_constraintStart_toStartOf="@+id/text_sign_in"
        app:layout_constraintTop_toBottomOf="@id/text_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/text_sub_title"
        app:layout_constraintTop_toBottomOf="@+id/text_sub_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            style="@style/TextInput"
            android:drawableStart="@drawable/custom_email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            style="@style/TextInput"
            android:drawableStart="@drawable/custom_lock_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_forgot_password"
        style="@style/TextContentSubTitle.Description"
        android:layout_margin="16dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Theme.AndNews.Button"
        android:text="@string/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/sfprodisplaymedium"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/btn_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/btn_sign_up" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>