<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.and.news.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.and.news.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_navigation_bookmark_to_signInActivity"
            app:destination="@id/signInActivity"
            app:launchSingleTop="false"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.and.news.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/signInActivity"
        android:name="com.and.news.ui.auth.login.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />
</navigation>