<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailNewsActivity"
    android:background="@color/grey_lighter">

    <ImageView
        android:id="@+id/iv_urlImage"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/detail_image_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="360dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_detail_source"
        style="@style/Theme.AndNews.Chip"
        android:layout_marginBottom="24dp"
        android:text="@string/item_source"
        app:chipBackgroundColor="@color/purple_primary"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_title"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_detail_title"
        style="@style/TextContent.DetailTitle"
        android:layout_margin="16dp"
        android:background="@drawable/ic_title_background"
        android:elevation="16dp"
        android:padding="8dp"
        android:text="@string/item_title"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/include_content"
        layout="@layout/layout_detail_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>