<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_sign_in"
        style="@style/TextContent.Title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_welcome_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/text_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_user_name"
            style="@style/TextInput"
            android:drawableStart="@drawable/custom_person_icon"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            style="@style/TextInput"
            android:drawableStart="@drawable/custom_email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>